--- a/index.html
+++ b/index.html
@@ -17,8 +17,28 @@
         <p>Наш гурток пропонує навчання для всіх вікових категорій.</p>
     </section>
 
+    <section class="initials-section">
+        <h2>Дані учасників</h2>
+        <table class="initials-table" id="initials-table">
+            <thead>
+                <tr>
+                    <th>Група</th>
+                    <th>Ініціали</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>КІ-401</td>
+                    <td>Медвідь Данило</td>
+                </tr>
+            </tbody>
+        </table>
+        <button id="add-row-btn">Додати учасника</button>
+    </section>
+
     <footer>
         <p>&copy; 2024 Шаховий гурток. Всі права захищено.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
